now has inputs and buttons to subtract or add to current hp and if temp hp exists it will subtract from that first. added more styling to the combat infor section

--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -70,11 +70,11 @@ input::-webkit-inner-spin-button {
 
 @mixin outerBox{
     margin-bottom: 2px;
-    background-color: tan;
     display: flex;
     border: 2px;
     border-style: solid;
     height: 50px;
+    background-color: tan;
     border-radius: 15px;
     align-items: center;
 
@@ -113,6 +113,14 @@ input::-webkit-inner-spin-button {
         border: 2px;
         border-style: solid;
         border-radius: 15px;
+        .skill-text{
+            height: 20px;
+            margin: 0;
+            border: 0px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
     .skill-line {
         border: 0px;
@@ -134,9 +142,72 @@ input::-webkit-inner-spin-button {
 }
 
 .combat-info{
+    border: 2px;
+    background-color: tan;
+    border-radius: 15px;
+    border-style: solid;
+    height: 500px;
     .top-row{
+        border: 0px;
+        margin-top: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         input{
             @include inputBox();
+        }
+        .top-row-col{
+            h2{
+                margin: 5px;
+            }
+            background-color: gray;
+            border: 2px;
+            border-style: solid;
+            border-radius: 15px;
+            margin-right: 5px;
+            margin-left: 5px;
+            text-align: center;
+        }
+    }
+    .max-health{
+        margin-top: 5px;
+        border: 0px;
+        border-bottom: 2px;
+        border-top: 2px;
+        border-style: solid;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        input{
+            @include inputBox();
+            width: 50px;
+        }
+    }
+    .temp-health{
+        border: 0px;
+        border-bottom: 2px;
+        border-style: solid;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        input{
+            @include inputBox();
+            width: 50px;
+        }
+    }
+    .current-health{
+        border: 0px;
+        text-align: center;
+        input{
+            margin-top: 5px;
+            font-size: 25px;
+            text-align: center;
+            height: 50px;
+            width: 200px;
+            border-radius: 10px;
+        }
+        h2{
+            margin: 0;
         }
     }
 }
