--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -210,4 +210,80 @@ input::-webkit-inner-spin-button {
             margin: 0;
         }
     }
+    .bottom-row{
+        display: flex;
+        justify-content: center;
+        div{
+            margin: 5px;
+        }
+        .hit-dice{
+            border: 0;
+            padding-right: 15px;
+            border-right: 2px;
+            border-style: solid;
+            margin-right: 0;
+            .total{
+                text-align: center;
+                border: 0;
+                h2{
+                    font-size: 20px;
+                    margin: 0;
+                }
+                input{
+                    text-align: center;
+                    border-radius: 5px;
+                    height: 20px;
+                    width: 100px;
+                    font-size: 18px;
+                }
+            }
+            .current{
+                text-align: center;
+                border: 0;
+                h2{
+                    font-size: 20px;
+                    margin: 0;
+                }
+                input{
+                    text-align: center;
+                    border-radius: 5px;
+                    height: 20px;
+                    width: 100px;
+                    font-size: 18px;
+                }
+            }
+            
+        }
+        .heal-damage{
+            border: 0;
+            border-left: 2px;
+            border-style: solid;
+            margin-left: 0;
+            padding-left: 15px;
+            text-align: center;
+            .hdinput{
+                border:0;
+                text-align: center;
+            }
+            input{
+                text-align: center;
+                border-radius: 5px;
+                height: 30px;
+                margin-top: 30px;
+                width: 100px;
+                font-size: 22px;
+            }
+            button{
+                margin: 2px;
+                height: 25px;
+                border-radius: 25px;
+            }
+            .heal-me{
+                background-color: green;
+            }
+            .damage-me{
+                background-color: red;
+            }
+        }
+    }
 }
