--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -7,14 +7,85 @@ div{
     border-color: black;
     border-style: solid;
 }
+.routes{
+    border: 0;
+}
 .navbar{
+    pointer-events: none;
+    border: 0;
+    position: fixed;
     display: flex;
-    justify-content: end;
-    margin-bottom: 10px;
+    align-items: center;
+    justify-content: space-around;
+    .logo{
+        
+        width: 50vw;
+        border: 0;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        margin-left: 30px;
+        :hover{
+            color: rgb(165, 4, 4);
+            background-color: rgb(163, 163, 163);
+            cursor: pointer;
+        }
+        h1{
+            pointer-events:auto;
+            align-items: center;
+            display: flex;
+            height: 100px;
+            border-radius: 10px;
+            margin: 0;
+            font-weight: bold;
+            font-size: 50px;
+            color: maroon;
+            background-color: gray;
+        }
+        img{
+            pointer-events:auto;
+            border-radius: 25px;
+            width: 100px;
+            margin-right: 5px;
+            
+        }
+    }
+    .links{
+        display: flex;
+        justify-content: end;
+        width: 50vw;
+        border: 0;
+        .link-div{
+            div{
+                border: 0;
+            }
+            border: 0;
+            display: flex;
+            border-radius: 10px;
+            flex-direction: column;
+            text-align: center;
+            font-size: 40px;
+            margin-right: 125px;
+            background-color: gray;
+            .link-item{
+                :hover{
+                    color: rgb(165, 4, 4);
+                    background-color: rgb(163, 163, 163);
+                    cursor: pointer;
+                }
+                p{
+                    pointer-events:auto;
+                    margin: 0;
+                    color: maroon;
+                }
+            }
+        }
+    }
 
 }
 
 .grid-container {
+    margin-top: 15px;
     border: 0;
     justify-content: center;
     display: grid;
@@ -368,6 +439,16 @@ cursor: pointer;
 .expand{
     border: 0;
     text-align: center;
+    section{
+        text-align: center;
+        background-color: tan;
+        height: auto;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    :hover{
+        cursor: pointer;
+    }
     button{
         background-color: white;
         width: 600px;
@@ -384,6 +465,9 @@ cursor: pointer;
         height: auto;
         margin-left: 15px;
         margin-right: 15px;
+    }
+    :hover{
+        cursor: pointer;
     }
     button{
         background-color: white;
@@ -404,4 +488,8 @@ cursor: pointer;
     .spell-line{
         border: 0;
     }
+}
+
+.chars-container{
+    text-align: center;
 }
