--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -564,9 +564,41 @@ cursor: pointer;
         height: auto;
         margin-left: 15px;
         margin-right: 15px;
+        .edit-button{
+            width: 100px;
+        }
     }
     
     button{
+        &:hover{
+            cursor: pointer;
+        }
+        background-color: white;
+        font-size: 18px;
+        width: 425px;
+        height: 25px;
+    }
+}
+.expand-prof{
+    border: 0;
+    text-align: center;
+    
+    section{
+        text-align: center;
+        background-color: tan;
+        height: auto;
+        margin-left: 15px;
+        margin-right: 15px;
+        .edit-button{
+            width: 100px;
+        }
+    }
+    .profnote{
+        width: 175px;
+        height: 25px;border-radius: 0px;
+    }
+    
+    .edit-button{
         &:hover{
             cursor: pointer;
         }
@@ -700,4 +732,71 @@ cursor: pointer;
 }
 .level{
     grid-area: level;
+}
+
+.proficiencies{
+    
+    display: grid;
+    grid-row-gap: 5px;
+    grid-column-gap: 5px;
+    grid-template-columns: 100%;
+    grid-template-rows: 100px auto 100px;
+    grid-template-areas: 
+    "prof"
+    "proflist"
+    "proftext"
+    ;
+    background-color: tan;
+    border-radius: 15px;
+    display: grid;
+    flex-direction: column;
+    text-align: center;
+    input{
+        margin: 5px;
+        text-align: center;
+        height: 30px;
+        
+    }
+    button{
+        width: 100px;
+        border-radius: 15px;
+        background-color: white;
+        &:hover{
+            cursor: pointer;
+        }
+    }
+    
+
+}
+
+.add-prof{
+    grid-area: prof;
+}
+.prof-list{
+    grid-area: proflist;
+}
+.prof-text{
+    grid-area: proftext;
+}
+
+.editing-form{
+    border-radius: 15px;
+    background-color: tan;
+    text-align: center;
+    input{
+        margin-top: 3px;
+        width: 300px;
+        height: 35px;
+        text-align: center;
+    }
+    button{
+        text-align: center;
+        width: 100px;
+        margin: 2px;
+        border-radius: 15px;
+        background-color: white;
+        &:hover{
+            cursor: pointer;
+        }
+    }
 }
